--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,10 +1,42 @@
 trigger:
   batch: true
-  brancches:
+  branches:
     include :
-    - master
+    - main
 
 pool:
   name: buildermanpool
   demands:
   - UNREAL_ENGINE_VERSION -equals 4.26.2
+
+stages:
+- stage: build
+  displayName: Build
+  jobs:
+  - job: build
+    displayName: Build & Package
+    steps:
+    - script: '"$(UNREAL_ENGINE_PATH)/Binaries/DotNET/UnrealBuildTool.exe" -projectfiles $(Build.SourcesDirectory)/Game/Game.uproject -game -rocket -progress'
+      displayName: Generate Project Files
+    - script: '"$(UNREAL_ENGINE_PATH)/Binaries/DotNET/UnrealBuildTool.exe" Shipping Win64 -Project="$(Build.SourcesDirectory)/Game/Game.uproject" -TargetType=Editor -Progress -NoEngineChanges -NoHotReloadFromIDE'
+      displayName: Build Game Module
+
+- script: 'RunUAT BuildCookRun -project="$(Build.SourcesDirectory)/Game/Game.uproject" -noP4 -clientconfig=Shipping -serverconfig=Shipping -utf8output -platform=Win64 -targetplatform=Win64 -build -cook -map=Transition+TestWorld+Lobby+MainMenu -unversionedcookedcontent -pak -distribution -compressed -prereqs -stage -package -stagingdirectory="$(Build.SourcesDirectory)/Game/Saved/StagedBuilds/" -cmdline=" -Messaging" -compile'
+      displayName: Package Client
+      failOnStderr: true
+      workingDirectory: '"$(UNREAL_ENGINE_PATH)/Build/BatchFiles"'
+
+- task: ArchiveFiles@2
+      displayName: Archive Client Package
+      inputs:
+        rootFolderOrFile: '$(Build.SourcesDirectory)/Game/Saved/StagedBuilds/WindowsNoEditor'
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(projectName)Client.zip'
+        
+- task: AzureCLI@2
+  displayName: Publish Client to Azure Blob Storage
+  inputs:
+    azureSubscription: <Name of the Azure Resource Manager service connection>
+    scriptType: pscore
+    scriptLocation: inlineScript
+    inlineScript: az storage blob upload --file "$(Build.ArtifactStagingDirectory)/$(projectName)Client.zip" --account-name mystorageaccount --container-name clientreleases --name game-client-$(Build.BuildId).zip
