--- a/pipeline.yml
+++ b/pipeline.yml
@@ -15,7 +15,7 @@ stages:
   - job: build
     displayName: Build & Package
     steps:
-    - script: '"$(UNREAL_ENGINE_PATH)\Binaries\DotNET\UnrealBuildTool.exe" -projectfiles $(Build.SourcesDirectory)\testbuildproject.uproject -game -progress'
+    - script: '"$(UNREAL_ENGINE_PATH)\Binaries\DotNET\UnrealBuildTool.exe" -projectfiles $(Build.SourcesDirectory)\Game\testbuildproject.uproject -game -progress'
       displayName: Generate Project Files
     #- script: '"$(UNREAL_ENGINE_PATH)\Binaries\DotNET\UnrealBuildTool.exe" Shipping Win64 -Project="$(Build.SourcesDirectory)\testbuildproject.uproject" -TargetType=Editor -Progress -NoEngineChanges -NoHotReloadFromIDE'
     #  displayName: Build Game Module
